# Tiki

./: .gitignore  README.md  windows.cmd
src/: CMakeLists.txt
src/cmake/: helpers.cmake  linux.cmake  osx.cmake  win.cmake  windows.cmake
src/samples/: CMakeLists.txt  main.cpp
src/tiki/: CMakeLists.txt  tiki.cfg  version.h
src/tiki/core/: All.h  Assert.h  CMakeLists.txt  Minimal.h  Platform.h  Types.h
src/tiki/core/Threading/: Atomic.h  Semaphore.h  Thread.h  ThreadWindows.cpp  ThreadWindows.h
src/tiki/core/Window/: Window.h  WindowSDL.cpp  WindowSDL.h
src/tiki/core/Windows/: AtomicWindows.h  PlatformWindows.h  SemaphoreWindows.cpp  ThreadWindows.cpp
src/tiki/sdl2/: CMakeLists.txt
